Fixing layout issues

--- a/src/less/content.less
+++ b/src/less/content.less
@@ -298,7 +298,7 @@ overflow-x: hidden;
     margin-bottom: 20px;
 }
 .setup-content {
-    min-height: 797px;
+    min-height: 855px;
     height: auto;
 }
 .slide-content {
